[package]
name = "lsh-dedup-service"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "lsh-dedup-cluster-service",
    "lsh-dedup-callback-service",
]

[dependencies]
csv = "1.0"
futures = "0.3"
lambda_runtime = "0.13"
rusoto_core = "0.48"
rusoto_s3 = "0.48"
serde = "1.0"
serde_json = "1.0"
