[package]
name = "lsh-dedup-callback-service"
version = "0.1.0"
edition = "2021"

[dependencies]
lsh-dedup-service = {path = "../"}
base64 = "0.13"
bytes = "1.1"
lambda_runtime = "0.13"
lazy_static = "1.4.0"
rusoto_core = "0.48"
rusoto_kms =  "0.48"
reqwest = {version="0.11.9", features=["json"]}
serde_json = "1.0"
tokio = "1.42"