[package]
name = "lsh-dedup-cluster-service"
version = "0.1.0"
edition = "2021"

[dependencies]
lsh-dedup-service = { path = "../" }
csv = "1.0"
futures = "0.3"
lambda_runtime = "0.13"
lazy_static = "1.5"
rand = "0.8.5"
rayon = "1.10"
rusoto_core = "0.48"
rusoto_s3 = "0.48"
rustc-hash = "2.0"
serde = "1.0"
serde_json = "1.0"
tokio = "1.42"
